# deku

./: .gitignore  package.json
.github/workflows/: dependency_graph.yml
esy.lock/: index.json
node/: building_blocks.re  dune  flows.re  networking.re  node_state.re  node_state.rei  state.re  state.rei  state_root_hash_state.re  trusted_validators_membership_change.re
protocol/: block.re  block.rei  operation.re  validators.re  validators.rei  wallet.re  wallet.rei
tests/: test_protocol.re  test_tezos_interop.re  test_validators.re
tezos_interop/: consensus.mligo  dune  tezos_interop.re  tezos_interop.rei
tezos_interop/js/: dune  webpack.config.js
