(rule
 (deps ./webpack.config.js ./listen_transactions.js ./run_entrypoint.js)
 (targets ./listen_transactions.bundle.js ./run_entrypoint.bundle.js)
 (mode fallback)
 (action
  (run webpack --env=%{profile})))

(rule
 (deps ./webpack.config.js ./listen_transactions.js ./run_entrypoint.js)
 (alias fmt)
 (mode fallback)
 (action
  (run prettier -c %{deps})))
